# bth-dv1626

./: CMakeLists.txt  README.md  main.cpp
lectures/lecture1/: canDivideBySeven.h  charCounter.h  convertMilesToKilometer.h  division.h  minutesToSeconds.h  multiplication.h  nameLength.h  timeCalculator.h
lectures/lecture2/: countdown.h  dieRoller.h  gameTwentyOne.h  leapYearChecker.h  lecture_a.h  lecture_b.h  occuranceCounter.h  wordCounter.h
lectures/lecture_assignments/: iceCreamGrader.h
lectures/lecture_assignments/t1/t1m1/: functions.h
lectures/lecture_assignments/t1/t1m2/: functions.cpp  functions.h
modules/module1/: canDivideBySeven.h  division.h
modules/module1/tasks1/: convertMilesToKilometer.h  minutesToSeconds.h  multiplication.h
modules/module1/tasks2/: countdown.h  dieRoller.h  divideByThree.h  leapYearChecker.h  occuranceCounter.h  wordCounter.h
modules/module1/tasks3/: rockPaperScissor.h  spaceCounter.h  vowelCounter.h
modules/module2/: wordCounter.h
